deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cce-scheduler-service
  namespace: cce
  labels:
    app.kubernetes.io/name: cce-scheduler-service
    app.kubernetes.io/version: "1.0.0"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cce-scheduler-service
  ports:
    - name: http
      port: 8083
      targetPort: http
      protocol: TCP
